# summarizer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: document_processor.py  main.py  models.py  prompts.py  settings.py
