[project]
name = "summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "gregsyu",email = "greg3@tutamail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "docx2txt (>=0.8,<0.9)",
    "unstructured (>=0.16.0,<0.17.0)",
]

[tool.poetry]
packages = [{include = "summarizer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
